# parameter-sharing-project-starting-point

./: .gitignore  LICENSE  pyproject.toml
src/parameter_sharing/models/: batchensemble.py
