[tool.poetry]
name = "parameter-sharing"
version = "0.1.0"
description = "A starting point for exploring parameter sharing in neural networks, with a focus on BatchEnsemble"
authors = ["Laurits Fredsgaard Larsen <laula@dtu.dk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.0"
torchvision = "^0.20.0"
typer = "^0.12.5"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
requests = "^2.32.3"
scipy = "^1.14.1"
xlrd = "^2.0.1"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"
ipython = "^7.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pyright]
exclude = [".ruff_cache", "/data", "__pycache__", ".git", ".venv"]
